# credit_decisioning_ekm

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  OPTIMIZATION_REPORT.md  README.md  TECHNICAL_DOCUMENTATION.md  TEST_RESULTS_DOCUMENTATION.md  api_log.txt  pyproject.toml  run_api.py  test_data.md  test_data_mapping.csv  test_pipeline.py  training_data.csv  training_template.csv
scripts/: mock_auth_service.py  test_auth_flow.py  test_embedding.py  verify_custom_auth.py  verify_ekm.py  verify_hitl.py  verify_mesh_reasoning.py  verify_scenarios.py
src/ekm/api/: app.py  auth.py  schemas.py
src/ekm/benchmarking/: performance_benchmarks.py
src/ekm/core/: advanced_tensor_ops.py  config.py  consolidation.py  efficient_indexing.py  engine.py  graph.py  models.py  retrieval.py  tensor_ops.py
src/ekm/infra/: deepseek.py
src/ekm/services/: __init__.py  auth_service.py  embedding_service.py
tests/: comprehensive_test_suite.py  config_tests.py  conftest.py  enhanced_tensor_tests.py  integration_tests.py  scale_validation.py  stress_testing.py  test_acu_extraction.py  test_ai_deduplication.py  test_ai_metadata_prompt.py  test_api_integration.py  test_metadata_extraction.py  test_optimized_system.py
ui/: index.html  package-lock.json  package.json  tailwind.config.js  tsc_errors.txt  tsc_plain.txt  tsconfig.electron.json
ui/dist-electron/: main.js  preload.js
ui/electron/: main.ts  preload.ts
ui/src/: App.tsx  index.css  main.tsx
ui/src/api/: client.ts
ui/src/components/: Button.tsx  Card.tsx  Header.tsx  Icons.tsx  Input.tsx  Loading.tsx  MobileNav.tsx  (+5 more)
(+21 files in other folders)
